Implement drag-and-drop functionality for todos and enhance animations for adding/removing items

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                 <li>Clear completed tasks</li>
                 <li>Tasks saved in browser</li>
                 <li>Inline editing (double-click task)</li>
+                <li>Animations</li>
+                <li>Drag & Drop</li>
             </ul>
             <button id="closeFeatures">Close</button>
         </div>
