Add Open Graph and Twitter meta tags to enhance social sharing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>TODO App</title>
     <link rel="icon" type="image/png" href="https://w-mirshod.com/assets/Mirshod-DsysRYlY.png" />
     <link rel="stylesheet" href="style.css">
+
+    <meta property="og:title" content="Bookmark Manager by W Mirshod" />
+    <meta property="og:description" content="Bookmark Manager - Organize your bookmarks easily. By W Mirshod." />
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0RZY3wa7G_QY8b-bt6Dxr8xoNZGNqrRxkXQ&s" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://todo.w-mirshod.com" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Bookmark Manager by W Mirshod" />
+    <meta name="twitter:description" content="Bookmark Manager - Organize your bookmarks easily. By W Mirshod." />
+    <meta name="twitter:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ0RZY3wa7G_QY8b-bt6Dxr8xoNZGNqrRxkXQ&s" />
+    <meta name="twitter:site" content="@w_mirshod" />
+    <meta name="telegram:channel" content="@w_mirshod" />
 </head>
 <body>
     <nav class="navbar">
